--- a/mypy.ini
+++ b/mypy.ini
@@ -8,3 +8,5 @@ no_implicit_optional = True
 ignore_missing_imports = True
 [mypy-tqdm.*]
 ignore_missing_imports = True
+[mypy-ahocorasick.*]
+ignore_missing_imports = True
