--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,8 +18,6 @@ repos:
         description: Prevent giant files from being committed.
       - id: check-builtin-literals
         description: Require literal syntax when initializing empty, or zero Python builtin types.
-      - id: name-tests-test
-        args: [ '--django' ]
       - id: check-case-conflict
         description: Check for files with names that would conflict on case-insensitive filesystems like MacOS/Windows.
       - id: check-merge-conflict
@@ -44,7 +42,7 @@ repos:
     hooks:
       - id: unittest
         name: unittest
-        entry: poetry run python -m unittest
+        entry: python -m unittest
         language: system
         types: [ python ]
         pass_filenames: false
