--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
     rev: 22.6.0
     hooks:
       - id: black
+        args: [--preview]
   - repo: local
     hooks:
       - id: unittest
