--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,19 +16,16 @@ repos:
         description: Check for files with names that would conflict on case-insensitive filesystems like MacOS/Windows.
       - id: no-commit-to-branch
         description: Protect specific branches from direct checkins.
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.263'
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.5.1
     hooks:
       - id: ruff
+        args: [ --fix ]
+      - id: ruff-format
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.950
+    rev: v1.10.1
     hooks:
       - id: mypy
-  - repo: https://github.com/ambv/black
-    rev: 22.6.0
-    hooks:
-      - id: black
-        args: [--preview]
   - repo: local
     hooks:
       - id: unittest
