--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,73 @@
 [project]
-name = "reach"
+name = "Reach"
+description = "Load your vector embeddings"
 readme = "README.md"
+version = "5.0.0"
+requires-python = ">=3.10"
+
+dependencies = [
+    "numpy",
+    "tqdm"
+
+]
 
 [build-system]
-requires = ["setuptools >= 40.6.0", "wheel"]
+requires = ["setuptools>=64", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
+
+[project.optional-dependencies]
+dev = [
+    "black",
+    "ipython",
+    "mypy",
+    "pre-commit",
+    "pytest",
+    "pytest-coverage",
+    "ruff",
+]
 
 [tool.ruff]
 exclude = [".venv/"]
-target-version = "py311"
+line-length = 120
+target-version = "py310"
 
-[[tool.mypy.overrides]]
-module = [
-    "tqdm.*",
-    "setuptools.*",
+[tool.ruff.lint]
+select = [
+    # Annotations: Enforce type annotations
+    "ANN",
+    # Pydocstyle: Enforce docstrings
+    "D",
+    # Isort: Enforce import order
+    "I",
+    # Numpy: Enforce numpy style
+    "NPY",
+    # Print: Forbid print statements
+    "T20",
 ]
+ignore = [
+    # Allow self and cls to be untyped, and allow Any type
+    "ANN101", "ANN102", "ANN401",
+    # Pydocstyle ignores
+    "D100", "D101", "D104", "D203", "D212", "D401",
+    # Allow use of f-strings in logging
+    "G004"
+]
+
+[tool.pydoclint]
+style = "sphinx"
+exclude = "test_"
+allow-init-docstring = true
+arg-type-hints-in-docstring = false
+check-return-types = false
+require-return-section-when-returning-nothing = false
+
+[tool.mypy]
+python_version = "3.10"
+warn_unused_configs = true
 ignore_missing_imports = true
+
+[tool.setuptools]
+packages = ["Reach"]
+
+[tool.setuptools_scm]
+# can be empty if no extra settings are needed, presence enables setuptools_scm
