--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install ruff
-        pip install -r requirements.txt
+        pip install .
     - name: Lint with ruff
       run: |
         ruff check reach
